tests/invalid/pow_mismatched_types/main.py
x: int = 2
y: float = 3.0
z: float = pow(x, y)
